<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.dizaraa.apps.fragment.SettingsFrag"
    android:background="@color/main_activity_bg">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="@dimen/_20sdp"
        android:layout_marginBottom="-20dp"
        app:cardBackgroundColor="@color/setting_frag_bg">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/banner_container"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="@dimen/_10sdp">

        <LinearLayout
            android:layout_marginBottom="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_15sdp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <LinearLayout
            android:layout_marginBottom="@dimen/_20sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/_15sdp"
                android:paddingBottom="@dimen/_15sdp">

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/folder"
                    app:tint="@color/settings_icon_color" />

                <TextView
                    android:id="@+id/txt1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_40sdp"
                    android:text="@string/txt_download_folder"
                    android:textColor="@color/setting_txt_color"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/folderpath"
                    android:layout_below="@+id/txt1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/_40sdp"
                    android:textSize="@dimen/_10sdp"
                    android:text=""
                    android:textStyle="bold"
                    android:fontFamily="@font/bold"
                    android:textColor="@color/setting_txt_color" />


            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.6dp"
                android:background="@color/settings_divider_color" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/_15sdp"
                android:paddingBottom="@dimen/_15sdp">

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/s_mode"
                    app:tint="@color/settings_icon_color" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/_40sdp"
                    android:text="@string/txt_dark_mode"
                    android:textColor="@color/setting_txt_color"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/modeSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    app:thumbTint="@color/switch_thumb_color"
                    app:trackTint="@color/switch_track_color" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.6dp"
                android:background="@color/settings_divider_color" />

            <RelativeLayout
                android:id="@+id/rateapp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/_15sdp"
                android:paddingBottom="@dimen/_15sdp">

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/s_rate"
                    app:tint="@color/settings_icon_color" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/_40sdp"
                    android:text="@string/txt_rate_us"
                    android:textColor="@color/setting_txt_color"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.6dp"
                android:background="@color/settings_divider_color" />

            <RelativeLayout
                android:id="@+id/shareapp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/_15sdp"
                android:paddingBottom="@dimen/_15sdp">

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/s_share"
                    app:tint="@color/settings_icon_color"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/_40sdp"
                    android:text="@string/txt_share_app"
                    android:textColor="@color/setting_txt_color"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.6dp"
                android:background="@color/settings_divider_color" />

            <RelativeLayout
                android:id="@+id/policy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/_15sdp"
                android:paddingBottom="@dimen/_15sdp">

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/s_policy"
                    app:tint="@color/settings_icon_color" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/_40sdp"
                    android:text="@string/txt__privacy_policy"
                    android:textColor="@color/setting_txt_color"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.6dp"
                android:background="@color/settings_divider_color" />

            <RelativeLayout
                android:id="@+id/moreapp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/_15sdp"
                android:paddingBottom="@dimen/_15sdp">

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/s_more"
                    app:tint="@color/settings_icon_color" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/_40sdp"
                    android:text="@string/txt_more_apps"
                    android:textColor="@color/setting_txt_color"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.6dp"
                android:background="@color/settings_divider_color" />
        </LinearLayout>

            <include layout="@layout/lay_adptive_banner_ad" />

            <include layout="@layout/layout_native"/>
            <include layout="@layout/ad_native_lay1"/>

        </LinearLayout>



    </ScrollView>

    </androidx.cardview.widget.CardView>

</RelativeLayout>