<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/_30sdp"
        android:gravity="center">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:backgroundTint="@color/setting_frag_bg"
            app:cardCornerRadius="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|top"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/_7sdp">


                <include layout="@layout/ad_native_lay1" />
                <include layout="@layout/lay_adptive_banner_ad"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/titleText2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_3sdp"
                        android:fontFamily="@font/font"
                        android:gravity="center"
                        android:text="@string/popup3"
                        android:textColor="@color/setting_txt_color"
                        android:textSize="@dimen/_15sdp"
                        android:textStyle="bold"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:layout_marginBottom="@dimen/_20sdp"
                        android:gravity="center">

                        <androidx.cardview.widget.CardView
                            android:layout_width="@dimen/_80sdp"
                            android:layout_height="match_parent"
                            android:layout_marginRight="@dimen/_5sdp"
                            android:clickable="true"
                            android:focusable="true"
                            android:foreground="?attr/selectableItemBackgroundBorderless"
                            app:cardCornerRadius="@dimen/_5sdp"
                            app:cardElevation="0dp">


                            <TextView
                                android:id="@+id/skip"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@color/main_activity_bg"
                                android:fontFamily="@font/font"
                                android:gravity="center"
                                android:text="@string/skip"
                                android:textColor="@color/white"
                                android:textSize="@dimen/_13sdp"
                                android:textStyle="bold"/>

                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:layout_width="@dimen/_80sdp"
                            android:layout_height="match_parent"
                            android:layout_marginStart="@dimen/_5sdp"
                            android:backgroundTint="@color/main_activity_bg"
                            app:cardCornerRadius="@dimen/_5sdp"
                            app:cardElevation="0dp">

                            <TextView
                                android:id="@+id/yes"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:fontFamily="@font/font"
                                android:gravity="center"
                                android:text="@string/yes"
                                android:textColor="@color/white"
                                android:textSize="@dimen/_13sdp"
                                android:textStyle="bold"/>

                        </androidx.cardview.widget.CardView>


                    </LinearLayout>


                </LinearLayout>
            </LinearLayout>


        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</RelativeLayout>
