<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.dizaraa.apps.fragment.HomeFrag"
    android:background="@color/main_activity_bg">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="@dimen/_20sdp"
        android:layout_marginBottom="-20dp"
        app:cardBackgroundColor="@color/setting_frag_bg">

        <ScrollView
            android:id="@+id/scrol1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_10sdp">

        <LinearLayout
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:id="@+id/btnLay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/_20sdp"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_marginBottom="@dimen/_30sdp"
                android:padding="@dimen/_13sdp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_37sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:background="@drawable/txt_bg">

                    <EditText
                        android:layout_marginStart="@dimen/_30sdp"
                        android:id="@+id/linkEdt"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_37sdp"
                        android:backgroundTint="@color/paste_clipbord"
                        android:gravity="center_vertical"
                        android:hint="@string/edit_hint"
                        android:paddingLeft="@dimen/_15sdp"
                        android:paddingRight="@dimen/_40sdp"
                        android:singleLine="true"
                        android:textSize="@dimen/_14sdp"
                        android:textStyle="bold" />

                    <ImageView
                        app:tint="@color/main_activity_bg"
                        android:id="@+id/link"
                        android:layout_width="@dimen/_18sdp"
                        android:layout_height="@dimen/_18sdp"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:src="@drawable/link"/>

                    <ImageView
                        android:id="@+id/clearTxt"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:paddingRight="@dimen/_7sdp"
                        android:src="@drawable/close"
                        app:tint="@color/paste_cancel" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="@dimen/_120sdp"
                        android:layout_height="@dimen/_35sdp"
                        android:backgroundTint="@color/icon_green"
                        app:cardCornerRadius="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_10sdp">

                    <TextView
                        android:id="@+id/pasteBtn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/btn_paste_link"
                        android:textColor="@color/paste_btn_text_color"
                        android:textSize="@dimen/_14sdp"
                        android:textStyle="bold" />

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="@dimen/_120sdp"
                        android:layout_height="@dimen/_35sdp"
                        android:backgroundTint="@color/main_activity_bg"
                        app:cardCornerRadius="@dimen/_8sdp">

                    <TextView
                        android:id="@+id/downloadBtn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/btn_download"
                        android:textColor="@color/download_btn_text_color"
                        android:textSize="@dimen/_14sdp"
                        android:textStyle="bold" />
                    </androidx.cardview.widget.CardView>

                </LinearLayout>

            </LinearLayout>

            <include layout="@layout/lay_adptive_banner_ad" />
            <include layout="@layout/layout_native"/>
            <include layout="@layout/ad_native_lay1"/>

            <TextView
                android:id="@+id/downtxt"
                android:layout_marginTop="@dimen/_20sdp"
                android:textColor="@color/settings_icon_color"
                android:textSize="@dimen/_14sdp"
                android:fontFamily="@font/bold"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/txt_recent_download"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:visibility="gone" />


            <androidx.cardview.widget.CardView
                android:backgroundTint="@color/recent_play_cardview"
                android:id="@+id/recentLay"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_153sdp"
                android:visibility="gone"
                app:cardCornerRadius="@dimen/_12sdp"
                android:layout_marginStart="@dimen/_13sdp"
                android:layout_marginEnd="@dimen/_13sdp"
                android:layout_marginBottom="@dimen/_13sdp">

            <androidx.cardview.widget.CardView
                android:layout_margin="@dimen/_3sdp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_147sdp"
                app:cardCornerRadius="@dimen/_10sdp"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/lastDownload"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"/>

                <ImageView
                    android:layout_gravity="center"
                    android:id="@+id/play"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/iconplayer"
                    android:visibility="gone"/>

            </androidx.cardview.widget.CardView>
            </androidx.cardview.widget.CardView>


        </LinearLayout>

        </ScrollView>

    </androidx.cardview.widget.CardView>

</RelativeLayout>